--- a/backend/TorteeProject/DiamondPlaza.Services/DiamondPlaza.Services.csproj
+++ b/backend/TorteeProject/DiamondPlaza.Services/DiamondPlaza.Services.csproj
@@ -19,6 +19,7 @@
 
     <ItemGroup>
       <Folder Include="App_Start\App_Start\" />
+      <Folder Include="Services\" />
     </ItemGroup>
 
 </Project>
