BE: Add class for DAO, REPOSITORY, SERVICE

--- a/backend/TorteeProject/DiamondPlaza.DAO/DiamondPlaza.DAO.csproj
+++ b/backend/TorteeProject/DiamondPlaza.DAO/DiamondPlaza.DAO.csproj
@@ -7,4 +7,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\DiamondPlaza.BusinessObject\DiamondPlaza.BusinessObject.csproj" />
+    </ItemGroup>
+
 </Project>
