--- a/backend/TorteeProject/DiamondPlaza.API/appsettings.json
+++ b/backend/TorteeProject/DiamondPlaza.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "server=hucun.database.windows.net;database=prn221;uid=hucun;pwd=Huucuong27062003;Integrated Security=true;Trusted_Connection=false;TrustServerCertificate=True"
+  }
 }
