--- a/backend/TorteeProject/DiamondPlaza.BusinessObject/DiamondPlaza.BusinessObject.csproj
+++ b/backend/TorteeProject/DiamondPlaza.BusinessObject/DiamondPlaza.BusinessObject.csproj
@@ -8,17 +8,20 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0-preview.3.24172.4" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.5" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.5">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.5" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.5">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\DiamondPlaza.DAO\DiamondPlaza.DAO.csproj" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="ReponseModels\" />
-      <Folder Include="ReponseViewModels\" />
-      <Folder Include="RequestModels\" />
+      <Folder Include="Migrations\" />
     </ItemGroup>
 
 </Project>
